# MyProjectEsp32P4

./: CMakeLists.txt  README.md
components/BSP/: CMakeLists.txt
components/BSP/BASE_FUNCTION/: base_function.c  base_function.h
components/BSP/ESP_TIME_FRAMEWORK/: esp_time_framework.c  esp_time_framework.h
components/BSP/GPIO_LEVEL_SWITCH/: gpio_level_switch.c  gpio_level_switch.h
components/BSP/RETURN_VALUE/: return_value.h
components/BSP/WDT/: wdt.c  wdt.h
components/TEST/: CMakeLists.txt
components/TEST/GPIO_ESP_TIME_TEST/: gpio_esp_time_test.c  gpio_esp_time_test.h
components/TEST/MCU_GPIO_SETUP/: mcu_gpio_setup.h
main/: main.c
